# check-assignment

./: .gitignore  Makefile  README.md  action.yaml  compose_integration_tests_payload.json  docker_integration_tests_payload.json  github_integration_tests_payload.json  integration_tests.vars  integration_tests_payload.json  params.json  pyproject.toml  requirements.txt  webhook_integration_tests_payload.json
.github/workflows/: act.yaml  integration_tests.yaml  test_report.yaml  unit_tests.yaml
checker/: checks.py  utils.py
checker/apps/: __init__.py  catty_reminders_app.py  check_assignment_tests.py  csharp_example.py  website_example.py
integrations_tests/: check-assignment-github-key.pub  github-howto.md  terraform-howto.md
integrations_tests/compose_assignment/ansible/: setup.yaml
integrations_tests/docker_assignment/ansible/: setup.yaml
integrations_tests/github_actions_assignment/ansible/: hosts.yaml  setup.yaml
integrations_tests/github_actions_assignment/terraform/: main.tf
integrations_tests/hacked-act-images/: README.md  ubuntu-latest.Dockerfile
integrations_tests/webhooks_devops_assignment/ansible/: ansible.cfg  setup.yaml
integrations_tests/webhooks_devops_assignment/terraform/: README.md  main.tf
scripts/: check_compose_assignment.py  check_docker_assignment.py  check_github_actions_assignment.py  check_webhooks_devops_assignment.py  prepare_parameters.py
tests/: test_check_webhooks_devops_assignment.py  test_checks.py  test_required_files_integration.py
